src/snapshots/pbsql__reference_extractor__tests__create_index.snap
---
source: src/reference_extractor.rs
expression: translate_result
---
Ok:
  indices:
    - - value: scoreIndex
        quote_style: "\""
  relations:
    - - value: ~/books/eloScores
        quote_style: "\""
  original_sql:
    - "CREATE INDEX \"scoreIndex\" ON \"~/books/eloScores\" (score)"
