src/snapshots/pbsql__reference_extractor__tests__create_index_compound_name.snap
---
source: src/reference_extractor.rs
expression: translate_result
---
Ok:
  indices:
    - - value: a
        quote_style: ~
      - value: b
        quote_style: ~
  relations:
    - - value: ~/books/eloScores
        quote_style: "\""
  original_sql:
    - "CREATE INDEX a.b ON \"~/books/eloScores\" (score)"
